Remove application properties

--- a/jwbserver/src/main/resources/application.properties
+++ b/jwbserver/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.main.allow-bean-definition-overriding=true
 spring.datasource.url=jdbc:mysql://localhost:3306/jwb?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=jwb
-spring.datasource.password=Nuli0103
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
